--- a/src/pages/w07/A/index.astro
+++ b/src/pages/w07/A/index.astro
@@ -11,7 +11,13 @@ import E from "./E.astro";
  title="CSA150 Course Reader"
  dir=""
  displayLayout={true}
- chapterSubSections={[]}
+ chapterSubSections={[
+  "Exception Handling",
+  "Throwing Exceptions",
+  "What Should You Throw?",
+  "The try and catch Blocks",
+  "Other catch Blocks",
+ ]}
 >
  <A displayLayout={false} />
  <B displayLayout={false} />
