--- a/src/pages/w08/E/index.astro
+++ b/src/pages/w08/E/index.astro
@@ -14,7 +14,16 @@ import H from "./H.astro";
  title="CSA150 Course Reader"
  dir=""
  displayLayout={true}
- chapterSubSections={[]}
+ chapterSubSections={[
+  "Digital Images",
+  "RGB Colors",
+  "The RGB Explorer",
+  "Digital Images in C++",
+  "Loading an Image",
+  "More on Loading an Image",
+  "Saving an Image",
+  "Changing the Format",
+ ]}
 >
  <A displayLayout={false} />
  <B displayLayout={false} />
