--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ hamburger_menue.addEventListener('click', function() {
      </div>
     </div>
    ) : (
-    <div class="border-b-2 border-b-slate-300 pb-16 relative">
+    <div class="border-b-2 border-b-slate-300 py-5 relative">
      <slot />
     </div>
    )
