--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@ html {
  scroll-behavior: smooth;
 }
 body {
- @apply bg-slate-200 dark:bg-slate-900 dark:text-slate-300 text-black text-xs md:text-base;
+ @apply bg-slate-200 dark:bg-slate-900 dark:text-slate-300 text-black text-sm md:text-base;
 }
 mark {
  //  font-weight: bold;
@@ -28,7 +28,7 @@ section {
  @apply leading-6 flex flex-col min-w-fit text-sm sm:text-lg;
 }
 p {
- @apply p-2 pb-3;
+ @apply p-2 pb-3 leading-7;
  tt {
   @apply inline;
  }
@@ -62,6 +62,10 @@ blockquote {
 // }
 img.right {
  float: right;
+}
+img.left {
+ @apply mr-5 mt-2;
+ float: left;
 }
 img.width-64 {
  width: 64px;
