--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -1,5 +1,5 @@
 ---
-import ChapterSideBar from "../utils/ChapterSideBar.vue";
+import FullTextSearch from "../utils/FullTextSearch.vue";
 ---
 
 <html lang="en">
@@ -15,10 +15,9 @@ import ChapterSideBar from "../utils/ChapterSideBar.vue";
  </head>
 
  <body>
-  <div class="relative w-full h-screen flex justify-center scroll-auto">
-   <div class="w-full">
-    <ChapterSideBar client:load />
-   </div>
-  </div>
+  <!-- <FullTextSearch client:load /> -->
+  <!-- Open the modal using ID.showModal() method -->
+
+  <div class="relative w-full h-screen flex justify-center scroll-auto"></div>
  </body>
 </html>
