--- a/src/pages/iframeTest.astro
+++ b/src/pages/iframeTest.astro
@@ -16,9 +16,14 @@ import ChapterSideBar from "../utils/ChapterSideBar.vue";
 
  <body>
   <div class="relative w-full h-screen flex justify-center scroll-auto">
-   <div class="w-full">
-    <ChapterSideBar client:load />
-   </div>
+   <iframe
+    src="toc"
+    title="W3Schools Free Online Web Tutorials"
+    class="w-1/6 hidden lg:block"
+   >
+   </iframe>
+
+   <iframe name="iframe_main" src="" class="w-full lg:w-5/6"></iframe>
   </div>
  </body>
 </html>
