--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -49,6 +49,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
  background: #f5f2f0;
+ @apply rounded-xl;
 }
 :not(pre) > code[class*="language-"] {
  padding: 0.1em;
@@ -179,7 +180,7 @@ pre[id].linkable-line-numbers span.line-numbers-rows > span:hover:before {
 }
 pre[class*="language-"].line-numbers {
  position: relative;
- padding-left: 3.8em;
+ padding-left: 5em;
  counter-reset: linenumber;
 }
 pre[class*="language-"].line-numbers > code {
