--- a/src/pages/w01/B/D.astro
+++ b/src/pages/w01/B/D.astro
@@ -46,7 +46,7 @@ const { useLayout } = Astro.props;
    which still use much of the original syntax designed by Ritchie.
   </p>
 
-  <div class="highlight width-80">
+  <div class="highlight width-80 alert alert-info">
    Unlike the other technologies we have discussed, UNIX is not acronymic (like
    FORTRAN). The original 1974 CACM paper— The UNIX Time-Sharing System
   </div>—used all caps because, in Ritchie's words, “
