--- a/src/pages/w01/C/B.astro
+++ b/src/pages/w01/C/B.astro
@@ -57,7 +57,7 @@ double convert(double temp)
 </code>
 </pre>
   </details>
-  <h2 class="text-blue-400 font-bold text-3xl">Comments</h2>
+  <h2 class="text-blue-400 font-bold">Comments</h2>
   <p>
    A <mark>comment</mark> is text provided for readers of your code; comments are
    ignored by the compiler. C++ has two kinds of comments:
