--- a/src/pages/w02/B/D.astro
+++ b/src/pages/w02/B/D.astro
@@ -15,7 +15,7 @@ const { useLayout } = Astro.props;
   <p class="firstLine">
    To practice with functions, let's revisit Homework 00.
   </p>
-  <div class="highlight">
+  <div class="highlight alert-info alert">
    <p>
     A metric ton is <strong>35,273.92</strong> ounces. Write a program that will
     read the weight of a package of breakfast cereal in ounces and output the weight
