--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const { id } = Astro.props;
 ---
 
 <header
- class="text-blue-800 dark:text-blue-400 pb-3 sm:pb-5 text-xl sm:text-4xl"
+ class="text-blue-800 dark:text-blue-400 py-3 sm:py-5 text-xl sm:text-4xl"
  id={id}
 >
  <slot />
