--- a/src/pages/w02/E/D.astro
+++ b/src/pages/w02/E/D.astro
@@ -12,7 +12,6 @@ const { useLayout } = Astro.props;
 >
  <Header id="D">Substrings</Header>
  <div>
-  <h1>Substrings</h1>
   <p class="firstLine">
    To create a new string, initialized with only a portion of an existing string
    (called<strong><em> </em></strong><strong>a substring</strong>), use the
@@ -46,7 +45,7 @@ cout &lt;&lt; str.substr(1, 3) &lt;&lt; endl;</code></pre>
     >1</tt
    > is the character <tt>'e'</tt>.
   </p>
-  <div class="highlight alert">
+  <div class="highlight alert alert-error">
    <svg
     xmlns="http://www.w3.org/2000/svg"
     class="stroke-current shrink-0 h-6 w-6"
@@ -83,7 +82,7 @@ cout &lt;&lt; str.substr(1, 3) &lt;&lt; endl;</code></pre>
    uses <tt>substr()</tt> to print the second half of <tt>str</tt>, which
    includes the middle character if the size of <tt>str</tt> is odd:
   </p>
-  <div class="highlight alert info">
+  <div class="highlight alert alert-info">
    <svg
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
