finish full text search

--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -15,7 +15,7 @@ import FullTextSearch from "../utils/FullTextSearch.vue";
  </head>
 
  <body>
-  <!-- <FullTextSearch client:load /> -->
+  <FullTextSearch client:load />
   <!-- Open the modal using ID.showModal() method -->
 
   <div class="relative w-full h-screen flex justify-center scroll-auto"></div>
