--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,9 @@
 const { id } = Astro.props;
 ---
 
+<div id={id}></div>
 <header
  class="text-blue-800 dark:text-blue-400 py-3 sm:py-5 text-xl sm:text-4xl"
- id={id}
 >
  <slot />
 </header>
