--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,18 +38,18 @@ hamburger_menue.addEventListener('click', function() {
  <body>
   {
    displayLayout ? (
-    <div class="flex w-screen h-screen">
+    <div class="flex w-screen h-screen ">
      <!--Side bar -->
- <nav class="hidden lg:block bg-slate-200 dark:bg-slate-800 lg:w-2/6 xl:w-1/5 h-screen overflow-auto border-r-2 border-r-slate-300 " id="side-bar-mobile">
+   <nav class="hidden lg:block bg-slate-200 dark:bg-slate-800 lg:w-2/6 xl:w-1/5 h-screen overflow-auto border-r-2 border-r-slate-300 " id="side-bar-mobile">
       <ChapterSideBar />
      </nav> 
      <div class="h-full w-full lg:w-4/6 xl:w-4/5 relative ">
     <!--Top bar navigation -->
-      <nav class="w-100  border-b-2 border-slate-300" id="top-navbar">
+      <nav class="w-100  border-b-2 border-slate-300 sticky top-0 z-10 bg-slate-200 dark:bg-slate-900" id="top-navbar">
        <TopNavbar sections={chapterSubSections} client:load />
       </nav>
      <!--Main content -->
-      <div class="flex relative" id="main-content">
+      <div class="flex relative " id="main-content">
        <main class="px-3 sm:p-5 h-full w-full xl:w-4/5 overflow-auto">
           <slot />
      
