--- a/src/pages/w01/E/C.astro
+++ b/src/pages/w01/E/C.astro
@@ -38,7 +38,7 @@ const { useLayout } = Astro.props;
 auto b = 15L;     // b is stored as a signed decimal long
 auto c = 15LL;    // c is stored as a signed decimal long long
 auto d = 15UL;    // d is an unsigned decimal long</code></pre>
-  <div class="highlight">
+  <div class="highlight alert alert-info">
    <p>
     Using <tt>auto</tt> instead of an explicit type to create the variables <tt
      >a</tt
