--- a/src/pages/w01/E/D.astro
+++ b/src/pages/w01/E/D.astro
@@ -45,7 +45,7 @@ const { useLayout } = Astro.props;
 auto b = 2.997E8;       // scientific notation, type double
 auto c = 299'792'458L;  // fixed notation, type long double
 auto d = 3.5F;          // fixed notation, type float</code></pre>
-   <div class="highlight">
+   <div class="highlight alert alert-info">
     <p>
      Generally, use <tt>double</tt>, not <tt>float</tt> or <tt>long</tt>
      <tt>double</tt>.
