--- a/src/pages/w02/C/D.astro
+++ b/src/pages/w02/C/D.astro
@@ -28,27 +28,33 @@ string s1 = "sam", s2 = "mary";</code></pre>
   <ul>
    <li>
     <mark>Equals</mark>: <tt>==</tt>. <code class="language-cpp"
-     >if (a == b - c) ...</code>
+     >if (a == b - c) ...</code
+    >
    </li>
    <li>
     <mark>Not-equals</mark>: <tt>!=</tt>. <code class="language-cpp"
-     >if (a != b) ...</code>
+     >if (a != b) ...</code
+    >
    </li>
    <li>
     <mark>Less-than</mark>: <tt>&lt;</tt>. <code class="language-cpp"
-     >if (s2 &lt; s1) ...</code>
+     >if (s2 &lt; s1) ...</code
+    >
    </li>
    <li>
     <mark>Less-than-or-Equals</mark>: <tt>&lt;=</tt>. <code class="language-cpp"
-     >if (a &lt;== b - c) ...</code>
+     >if (a &lt;== b - c) ...</code
+    >
    </li>
    <li>
     <mark>Greater-than</mark>: <tt>&gt;</tt>. <code class="language-cpp"
-     >if (s1 &gt; s2) ...</code>
+     >if (s1 &gt; s2) ...</code
+    >
    </li>
    <li>
     <mark>Greater-than-or-Equals</mark>: <tt>&gt;=</tt>. <code
-     class="language-cpp">if (b &gt;== a + c) ...</code>
+     class="language-cpp">if (b &gt;== a + c) ...</code
+    >
    </li>
   </ul>
   <p>
@@ -94,7 +100,7 @@ sqrt(2.0) * sqrt(2.0) == 2.0;  // false</code></pre>
    with these numbers, those small errors are magnified, and you end up with nonsensical
    comparisons such as these.
   </p>
-  <div class="highlight">
+  <div class="highlight alert alert-info">
    <p>
     To correctly compare floating-point numbers, you must first calculate the
     absolute value of the difference between the two numbers, and then compare
