--- a/src/pages/w02/D/A.astro
+++ b/src/pages/w02/D/A.astro
@@ -85,9 +85,9 @@ string s7(20, '-');          // 20 dashes</code></pre>
   </li>
  </ol>
  <p>
-  The <tt>{}</tt> and the <tt>()</tt> may often be used interchangably. However,
+  The <tt>{"{}"}</tt> and the <tt>()</tt> may often be used interchangably. However,
   for <tt>s5</tt>, you <mark>must</mark>
-  use the braces <tt>{}</tt>, and for <tt>s7</tt>
+  use the braces <tt>{"{}"}</tt>, and for <tt>s7</tt>
   you <mark>must</mark> use parentheses <tt>()</tt>. In C++98, you must use
   parentheses, not braces, and <tt>s5</tt>
   and <tt>s6</tt> will not work at all. These constructors, and raw strings were
