--- a/src/pages/w02/D/C.astro
+++ b/src/pages/w02/D/C.astro
@@ -34,7 +34,7 @@ string s2 = s1 + " " + s2;          // "hello world"</code></pre>
    > objectss as you could in Java.
   </p>
   <pre
-   class="language-cpp"><code>string s{"abc"};  // uniform initialization
+   class="language-cpp"><code>string s{'{"abc"}'};  // uniform initialization
 s += s;           // ok, "abcabc"
 s += "def";       // literal ok, "abcabcdef"
 s += 'g';         // char ok, "abcabcdefg"
