changed website description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ hamburger_menue.addEventListener('click', function() {
 <html lang="en">
  <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Astro description" />
+  <meta name="description" content="The course reader for Orange Coast College. Course CSA150 C++ Programming I" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="../styles/prism.css" />
   <script src="../utils/prisms"></script>
