--- a/src/pages/w10/B/index.astro
+++ b/src/pages/w10/B/index.astro
@@ -6,6 +6,7 @@ import C from "./C.astro";
 import D from "./D.astro";
 import E from "./E.astro";
 import F from "./F.astro";
+import G from "./G.astro";
 ---
 
 <Layout
@@ -28,4 +29,5 @@ import F from "./F.astro";
  <D displayLayout={false} />
  <E displayLayout={false} />
  <F displayLayout={false} />
+ <G displayLayout={false} />
 </Layout>
